# ncurses-vala-meson-demos

./: README.md  meson.build  techstack.md  techstack.yml
src/: colors.vala  doupdate.vala  just-text.vala  keyboard-and-mouse.vala  main.vala  menu-multicolumn.vala  menu-options.vala  menu-user-pointer.vala  menu-with-window.vala  menu.vala  meson.build  panels-move.vala  panels-resize.vala  panels-show-hide.vala  panels-switch.vala  panels-toggle.vala  panels.vala  two-windows.vala  window-with-text.vala
vapi/: curses-fixes.vapi  curses-menu.vapi  curses-panel.vapi
