executable(
  'just-text',
  'just-text.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'window-with-text',
  'window-with-text.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'two-windows',
  'two-windows.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'doupdate',
  'doupdate.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'panels',
  'panels.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'panels-switch',
  'panels-switch.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'panels-toggle',
  'panels-toggle.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'panels-move',
  'panels-move.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'panels-resize',
  'panels-resize.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'panels-show-hide',
  'panels-show-hide.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'colors',
  'colors.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'keyboard-and-mouse',
  'keyboard-and-mouse.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'menu',
  'menu.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'menu-with-window',
  'menu-with-window.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'menu-multicolumn',
  'menu-multicolumn.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'menu-options',
  'menu-options.vala',
  dependencies: dependencies,
  install: true
)

executable(
  'menu-user-pointer',
  'menu-user-pointer.vala',
  dependencies: dependencies,
  install: true
)
